# logic-rs

./: Cargo.toml  README.md
src/: main.rs
src/propositional/: syntax.rs
